deploy_api/registry/user-recommend-canary/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-recommend-canary-ingress
  namespace: development
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: development-user-recommend-canary-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/user-recommend-canary"
            backend:
              service:
                name: user-recommend-canary-service
                port:
                  number: 8001

  tls:
    - hosts:
        - "20.204.216.47.nip.io"
      secretName: domain-ingress-tls
